syntax = "proto3";

package interchain_security.ccv.v1;

option go_package = "github.com/cosmos/interchain-security/x/ccv/types";

import "ibc/lightclients/tendermint/v1/tendermint.proto";
import "ibc/core/channel/v1/channel.proto";
import "gogoproto/gogo.proto";
import "tendermint/abci/types.proto";
import "interchain_security/ccv/v1/ccv.proto";

// ChildGenesisState defines the CCV child chain genesis state
message ChildGenesisState {
  bool   disabled          = 1;
  string parent_channel_id = 2
      [(gogoproto.moretags) = "yaml:\"parent_channel_id\""]; // empty for a completely new chain
  bool new_chain = 3
      [(gogoproto.moretags) = "yaml:\"new_chain\""]; // true for new chain GenesisState, false for chain restart.
  // ParentClientState filled in on new chain, nil on restart.
  ibc.lightclients.tendermint.v1.ClientState parent_client_state = 4
      [(gogoproto.moretags) = "yaml:\"parent_client_state\""];
  // ParentConsensusState filled in on new chain, nil on restart.
  ibc.lightclients.tendermint.v1.ConsensusState parent_consensus_state = 5
      [(gogoproto.moretags) = "yaml:\"parent_consensus_state\""];
  repeated UnbondingSequence unbonding_sequences = 6
      [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"unbonding_sequences\""];
}

// UnbondingSequence defines the genesis information for each unbonding packet sequence.
message UnbondingSequence {
  uint64                     sequence         = 1;
  uint64                     unbonding_time   = 2 [(gogoproto.moretags) = "yaml:\"unbonding_time\""];
  ibc.core.channel.v1.Packet unbonding_packet = 3
      [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"unbonding_packet\""];
}

// ParentGenesisState defines the CCV parent chain genesis state
message ParentGenesisState {
  repeated ChildState child_states = 1 [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"child_states\""];
}

// ChildState defines the state that the parent chain stores for each child chain
message ChildState {
  string chain_id   = 1 [(gogoproto.moretags) = "yaml:\"chain_id\""];
  string channel_id = 2 [(gogoproto.moretags) = "yaml:\"channel_id\""];
  Status status     = 3;
}
